# streamer-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.toml  config.toml.example  docker-compose.yml  mediamtx.yml  table-tv.code-workspace  table-tv.config.example
.github/workflows/: deb-publish.yml
api/: Cargo.toml  build.rs
api/debian/: avahi-table-tv.service  config.toml.example  env.example  mediamtx.yml  nginx.conf  postinst  stunnel-fb.conf  table-tv-start.sh  table-tv.config.example  table-tv.service
api/src/: config.rs  error.rs  main.rs
api/src/api/: admin.rs  auth.rs  auth0.rs  camera.rs  config.rs  facebook.rs  info.rs  mod.rs  pool_match.rs  server.rs  settings.rs
api/src/db/: admin.rs  camera.rs  mod.rs  pool_match.rs  settings.rs  user.rs
api/src/video/: internal_camera.rs  mediamtx.rs  mjpeg.rs  mod.rs  overlay.rs  recording.rs  rtmp.rs  rtsp_camera.rs  stream.rs
docker/: entrypoint.sh  mediamtx.yml
ui/: vite.config.js
ui/src/: App.css  App.jsx  apiInfoStore.js  apiInfoStore.jsx  authStore.js  authStore.jsx  main.jsx
ui/src/components/: Layout.jsx  LiveTimestamp.jsx  MatchDuration.jsx
ui/src/features/admin/: index.js
ui/src/features/admin/api/: create.js  hashPassword.js  login.js  settings.js
ui/src/features/admin/components/: admin.css  login.jsx  registration.jsx
ui/src/features/admin/pages/: Admin.jsx  CameraSettings.jsx  MatchesSettings.jsx  ServerSettings.jsx
ui/src/features/cameras/: cameraStore.js  index.js
ui/src/features/cameras/api/: cameras.js  poolMatches.js
ui/src/features/cameras/components/: DownloadRecordingButton.jsx  MatchHistory.jsx  MatchScoreControls.jsx  StreamPreview.jsx
ui/src/features/cameras/pages/: Camera.jsx  Match.jsx
ui/src/pages/: Home.jsx
ui/src/utils/: format.js
