[package]
name = "table-tv-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
bytes = "1.0"
image = "0.25"
nokhwa = { version = "0.10", default-features = false, features = ["input-native"] }
tokio-stream = { version = "0.1", features = ["sync"] }
bcrypt = "0.17"
polodb_core = "5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "util", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4.44"
log = "0.4.29"
