[package]
name = "table-tv-api"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2"
axum = { version = "0.7", features = ["json"] }
bytes = "1.0"
image = "0.25"
imageproc = "0.25"
tokio-stream = { version = "0.1", features = ["sync"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
urlencoding = "2.1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "util", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15"
log = "0.4.29"
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
jsonwebtoken = "9.2"