[package]
name = "table-tv"
version = "0.1.0"
edition = "2021"
description = "Table TV - pool table camera streaming, recording, and overlay"
license = "MIT"
authors = ["Kyle Nahrgang"]

[package.metadata.deb]
maintainer = "Kyle Nahrgang <table-tv@kyle.nahrgang.dev>"
section = "web"
depends = "ca-certificates, avahi-daemon, avahi-utils, dumb-init, ffmpeg, curl, fonts-dejavu-core, stunnel"
assets = [
    ["target/release/table-tv", "usr/bin/table-tv", "755"],
    ["target/release/ui-dist/**/*", "usr/share/table-tv/ui-dist/", "644"],
    ["debian/table-tv-start.sh", "usr/lib/table-tv/table-tv-start.sh", "755"],
    ["debian/stunnel-fb.conf", "etc/table-tv/stunnel-fb.conf", "644"],
    ["debian/mediamtx.yml", "etc/table-tv/mediamtx.yml", "644"],
    ["debian/config.toml.example", "etc/table-tv/config.toml.example", "644"],
    ["debian/avahi-table-tv.service", "etc/avahi/services/avahi-table-tv.service", "644"]
]
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]
unit-name = "table-tv"

[dependencies]
ab_glyph = "0.2"
axum = { version = "0.7", features = ["json"] }
bytes = "1.0"
image = "0.25"
imageproc = "0.25"
tokio-stream = { version = "0.1", features = ["sync"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
urlencoding = "2.1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "util", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4.44", features = ["serde"] }
nix = { version = "0.28", features = ["signal"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
jsonwebtoken = "9.2"